Mis-alignment fix, when no header is present

--- a/stylesheets/chord-diagram.css
+++ b/stylesheets/chord-diagram.css
@@ -51,6 +51,9 @@ div.chord-diagram > div.row > div:last-child {
 	border-width: 1px 1px 0 1px;
 }
 
+div.chord-diagram > div.row.first:first-child {
+    margin-top:9px;
+}
 div.chord-diagram > div.row.first > div {
 	border-width: 4px 0 0 1px;
 }
